--- a/index.html
+++ b/index.html
@@ -16,31 +16,39 @@
         <div id="right">
             <p>This is not a real online service! You know you need somethig like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
             <p>You <em>know</em> you want to.</p>
-            <form action="post">
+            <form action="#">
                 <div id="form-container">
                     <h1>Let's do this!</h1>
-                    <label for="firstName">
-                        FIRST NAME <input type="text" id="firstName">
-                    </label>
-                    <label for="lastName">
-                        LAST NAME <input type="text" id="lastName">
-                    </label>
-                    <label for="email">
-                        EMAIL <input type="email" id="email">
-                    </label>
-                    <label for="phone">
-                        PHONE NUMBER <input type="tel" id="phone">
-                    </label>
-                    <label for="password">
-                        PASSWORD <input type="password" id="password">
-                    </label>
-                    <label for="confirmPassword">
-                        CONFIRM PASSWORD <input type="password" id="confirmPassword">
-                    </label>
+                    <div id="input-container">
+                        <div class="input-container">
+                            <label for="firstName">
+                                FIRST NAME <input type="text" id="firstName">
+                            </label>
+                            <label for="lastName">
+                                LAST NAME <input type="text" id="lastName">
+                            </label>
+                        </div>
+                        <div class="input-container">
+                            <label for="email">
+                                EMAIL <input type="email" id="email">
+                            </label>
+                            <label for="phone">
+                                PHONE NUMBER <input type="tel" id="phone">
+                            </label>
+                        </div>
+                        <div class="input-container">
+                            <label for="password">
+                                PASSWORD <input type="password" id="password">
+                            </label>
+                            <label for="confirmPassword">
+                                CONFIRM PASSWORD <input type="password" id="confirmPassword">
+                            </label>
+                        </div>
+                    </div>
                 </div>
                 <button type="submit">Create Account</button>
+                <h4>Already have an account? <a href="">Log in</a></h4>
             </form>
-            <h4>Already have an account? Log in</h4>
         </div>
     </body>
 </html>
